<resources>
    <string name="app_name">HCare</string>
    <string name="view_favorites">View Favorites</string>
    <string name="addFav">Add to Favorites</string>
    <string name="remFav">Remove from Favorites</string>
    <string name="view_all">View All Clinics</string>
    <string name="call">Call</string>
    <string name="web">Visit Website</string>
    <string name="contact">Add Contact</string>
    <string name="email">Email</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
        AIzaSyCrkjUA2fjGdy0Qb1E_tGsSB0q-hBcjLnQ
    </string>
    <string name="title_activity_show_clinic">ShowClinic</string>
    <string name="searchHint">Name/city/state/zip</string>
</resources>
