<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="team.mbl404.hcare.SearchClinics">

    <item
        android:id="@+id/search"
        android:title="@string/app_name"
        android:hint="@string/searchHint"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="android.support.v7.widget.SearchView"/>

    <item
        android:id="@+id/viewFavorites"
        android:orderInCategory="100"
        android:title="@string/view_favorites"
        app:showAsAction="never" />
    <item
        android:id="@+id/viewAll"
        android:orderInCategory="100"
        android:title="@string/view_all"
        app:showAsAction="never" />
</menu>
