<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="team.mbl404.hcare.ShowClinic"
    tools:showIn="@layout/activity_show_clinic">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:id="@+id/headerField"
        android:orientation="horizontal">
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:layout_weight="1"
            android:id="@+id/header"
            android:textColor="@color/textMain"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/favoriteStar"
            android:src="@android:drawable/star_big_off"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/headerField"
        android:id="@+id/buttonBar">
        <ImageView
            style="@style/BBarItem"
            android:autoLink="phone"
            android:src="@android:drawable/ic_menu_call"
            android:id="@+id/phone"/>

        <ImageView
            style="@style/BBarItem"
            android:autoLink="email"
            android:layout_toEndOf="@id/phone"
            android:src="@android:drawable/ic_dialog_email"
            android:id="@+id/email"/>

        <ImageView
            style="@style/BBarItem"
            android:src="@android:drawable/ic_dialog_info"
            android:layout_toEndOf="@id/email"
            android:id="@+id/website"
            android:autoLink="web"/>
        <ImageView
            style="@style/BBarItem"
            android:layout_toEndOf="@id/website"
            android:src="@android:drawable/ic_dialog_dialer"
            android:id="@+id/contact"/>
        <TextView
            android:text="@string/call"
            android:layout_below     ="@id/phone"
            android:layout_alignEnd  ="@id/phone"
            android:layout_alignStart="@id/phone"
            style="@style/BBarText"/>
        <TextView
            android:text="@string/email"
            android:layout_below     ="@id/email"
            android:layout_alignEnd  ="@id/email"
            android:layout_alignStart="@id/email"
            style="@style/BBarText"/>
        <TextView
            android:text="@string/web"
            android:layout_below     ="@id/website"
            android:layout_alignEnd  ="@id/website"
            android:layout_alignStart="@id/website"
            style="@style/BBarText"/>
        <TextView
            android:text="@string/contact"
            android:layout_below     ="@id/contact"
            android:layout_alignEnd  ="@id/contact"
            android:layout_alignStart="@id/contact"
            style="@style/BBarText"/>

    </RelativeLayout>

    <fragment
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/buttonBar"
        class="com.google.android.gms.maps.SupportMapFragment" />

</RelativeLayout>
